--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -67,7 +67,6 @@
     "React": true,
     "ReactDOM": true,
     "loris": true,
-    "QueryString": true,
-	"swal": true
+    "QueryString": true
   }
 }
